<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:contentDescription="@string/ImageCalzado"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewNombreCard"
                android:layout_width="145dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:text="@string/textviewZapato"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.576"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewPrecioCard"
                android:layout_width="136dp"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:text="@string/textviewPrecio"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewNombreCard"
                app:layout_constraintStart_toStartOf="@+id/textViewNombreCard"
                app:layout_constraintTop_toBottomOf="@+id/textViewNombreCard"
                tools:ignore="TextSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>