<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.Sprint_Final_Mod5"
    tools:context=".DescripcionFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="315dp"
        android:contentDescription="@string/ImageCalzado"
        app:layout_constraintBottom_toTopOf="@+id/textViewNombreDescrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewNombreDescrip"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginBottom="64dp"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPrecioDescrip"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewPrecioDescrip"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="36dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonAgregar"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonAgregar"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonAgregar" />

    <ImageButton
        android:id="@+id/imageButtonAgregar"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFB73924"
        android:contentDescription="@string/botonAgregar"
        android:src="@drawable/baseline_add_shopping_cart_24"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonVolver"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButtonVolver"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#67130C"
        android:contentDescription="@string/botonVolver"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonAgregar"
        app:layout_constraintStart_toStartOf="@+id/textViewPrecioDescrip"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>